# armore-server

./: .env.save  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yaml
rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.production  Dockerfile.test  Makefile  README.md  Rocket.toml  cut_build_push_image.sh  docker-compose.yaml
rust/src/: constants.rs  lib.rs  strings.rs
rust/src/auth/: mod.rs
rust/src/controllers/: devices.rs  emergency.rs  invitations.rs  mod.rs  telemetry.rs
rust/src/db/: devices.rs  mod.rs  telemetry.rs
rust/src/emergency/: handlers.rs  mod.rs
rust/src/http_gateway/: handlers.rs
rust/src/invitations/: handlers.rs  mod.rs
rust/src/lang/: english.rs  mod.rs  spanish.rs
rust/src/messaging/: mod.rs  slack.rs
rust/src/middleware/: auth.rs
rust/src/model/: auth.rs  devices.rs  emergency.rs  invitations.rs  mod.rs  notifications.rs  requests.rs  responses.rs  telemetry.rs
rust/src/server/: emergency.rs  http_gateway.rs  invitations.rs  mod.rs
rust/src/utils/: sentry.rs
rust/tests/: auth_test.rs  emergency_tests.rs  http_gateway_tests.rs  invitations_tests.rs  notifications_tests.rs
rust/tests/common/: auth.rs  db.rs  dbmate.rs  mod.rs  rabbit.rs  redis.rs
server_rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Git.md  Makefile  README.md  REDIS.md  docker-compose-test-local.yaml  entrypoint_test.sh
server_rust/config/: .env.global  .env.http-gateway  .env.postgres  .env.rabbit
server_rust/queries/: all_users_with_last_location_timestamp.sql  alliosusers.sql  followers.sql  following.sql  getlastlocation.sql  queries.sql
server_rust/src/: catchers.rs  constants.rs  http_gateway.rs  invitations.rs  lib.rs  nanny.rs  strings.rs
server_rust/src/auth/: mod.rs
server_rust/src/db/: mod.rs
server_rust/src/dbmate/: mod.rs
server_rust/src/emergency/: mod.rs
server_rust/src/http_gateway/: mod.rs
server_rust/src/invitations/: handlers.rs
server_rust/src/model/: mod.rs
server_rust/src/publish_websocket_messages/: mod.rs
server_rust/tests/: http_gateway_tests.rs  publish_websocket_messages_tests.rs
server_rust/tests/common/: auth.rs  db.rs  redis.rs
(+222 files in other folders)
