[package]
name = "server_rust"
version = "0.1.0"
authors = ["Griffin Obeid <griffobeid@gmail.com>", "Dario Lencina Talarico <darioalessandrolencina@gmail.com", "Víctor Martínez <victorcoder2@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
amiquip = "0.4.0"
chrono = "0.4.19"
dynfmt = { version = "0.1.4", features = ["curly"] }
env_logger = "0.8"
futures = "0.3.8"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4"
postgres= {version = "0.19", features = ["with-chrono-0_4"]}
postgres-types= {version = "0.2", features = ["derive"]}
redis = "0.19.0"
regex = "1"
reqwest = {version = "0.10", features = ["json"]}
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
rocket = { version = "0.4.6", default-features = false }
rocket_cors = "0.5.2"
rocket_contrib = "0.4.6"
serde="1.0"
serde_json="1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
pretty_assertions = "0.6.1"
rocket_sentry_logger = "0.2.1"

